--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://zeriaaron/personal-website",
+    "homepage": "https://zeriaaron.github.io/personal-website",
     "name": "zeriaaron.github.io",
     "version": "0.1.0",
     "private": true,
